--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-redux": "^8.0.1",
+    "react-redux-form": "^1.16.14",
     "react-router-dom": "^4.2.2",
     "react-scripts": "5.0.0",
     "reactstrap": "^9.0.1",
