--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "bootstrap-social": "^5.1.1",
     "cross-fetch": "^2.1.0",
     "font-awesome": "^4.7.0",
+    "prop-types": "^15.8.1",
     "react": "^18.0.0",
+    "react-animation-component": "^0.2.3",
+    "react-animation-components": "^3.0.0",
     "react-dom": "^18.0.0",
     "react-redux": "^8.0.1",
     "react-redux-form": "^1.16.14",
